# ingest-rust

./: Cargo.toml  Dockerfile  Procfile  Readme.md  nixpacks.toml
src/: main.rs
