[package]
name = "ingest-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bb8 = "0.8"
bb8-postgres = "0.8"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
chrono = "0.4"
uuid = { version = "1.9", features = ["v4"] }
url = "2.5"
rustls = { version = "0.23", features = ["ring"] }
